--- a/frontend/index.html
+++ b/frontend/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="HolisticMatch - Conectando você com profissionais de terapias holísticas" />
     <title>HolisticMatch - Terapias Holísticas</title>
     
-    <!-- Material Symbols Icons -->
+    <!-- Material Symbols Icons :) -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
   <body>
