--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,11 +2,12 @@
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="HolisticMatch - Conectando você com profissionais de terapias holísticas" />
     <title>HolisticMatch - Terapias Holísticas</title>
     
-    <!-- Material Symbols Icons :) -->
+    <!-- Material Symbols Icons :)  -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
   </head>
   <body>
